--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <header>
         <h1>Jenna Brooks</h1>
         <p>Project Manager | Logistics | Aspiring Developer</p>
+        <p>Washington, DC</p>
     </header>
 
     <section>
