--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </section>
 
     <footer>
-        <p>Contact: <a href="mailto:brookstravels90@gmail.com" style="color: white;">brookstravels90@gmail.com</a></p>
+        <p>Contact: <a href="mailto:brookstravels90@gmail.com" style="color: white;">brookstravels90@gmail.com</a> | (771) 241-2577</p>
     </footer>
 </body>
 </html>
