--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             background-color: #2c3e50;
             color: white;
         }
+        footer a {
+            color: white;
+            margin: 0 10px;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -86,7 +91,13 @@
     </section>
 
     <footer>
-        <p>Contact: <a href="mailto:brookstravels90@gmail.com" style="color: white;">brookstravels90@gmail.com</a> | (771) 241-2577</p>
+        <p>Contact: <a href="mailto:brookstravels90@gmail.com">brookstravels90@gmail.com</a> | (771) 241-2577</p>
+        <p>
+            Social: 
+            <a href="https://mastodon.social/@brookstravels90" target="_blank">Mastodon</a> | 
+            <a href="https://www.pinterest.com/brookstravels/" target="_blank">Pinterest</a> | 
+            <a href="https://www.reddit.com/user/brookstravels90/" target="_blank">Reddit</a>
+        </p>
     </footer>
 </body>
 </html>
