add pfp and about

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             text-align: center;
             padding: 20px;
         }
+        header img {
+            border-radius: 50%;
+            width: 150px;  /* Square profile picture, adjust as necessary */
+            height: 150px;
+            margin-top: 10px;
+        }
         section {
             margin: 20px;
         }
@@ -45,14 +51,24 @@
             margin: 0 10px;
             text-decoration: none;
         }
+        .about-me {
+            margin-top: 20px;
+            font-style: italic;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Jenna Brooks</h1>
-        <p>Project Manager | Logistics | Aspiring Developer</p>
-        <p>Washington, DC</p>
+	<img src="profile.png" alt="Jenna Brooks' Profile Picture">        
+	<h1>Jenna Brooks</h1>
+        <p>Project Manager | Logistics | Aspiring Developer | Washington, DC</p>
+        <p></p>
     </header>
+
+    <section class="about-me">
+        <p>📦 Logistics project manager by day, code newbie by night. Exploring Python, automation, and data visualization to make work (and life!) a little more efficient. Proud dog mom to Mochi 🐾 and coffee enthusiast ☕️. Let’s connect and create something cool!</p>
+    </section>
 
     <section>
         <h2>Work Experience</h2>
