--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <header>
-	<img src="profile.png" alt="Jenna Brooks' Profile Picture">        
+	<img src="./profile.png" alt="Jenna Brooks' Profile Picture">        
 	<h1>Jenna Brooks</h1>
         <p>Project Manager | Logistics | Aspiring Developer | Washington, DC</p>
         <p></p>
