--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <strong>Project Manager</strong> - <em>XYZ Logistics</em> (Jan 2020 - Present)
                     <ul>
                         <li>Led cross-functional teams on logistics projects.</li>
-                        <li>Developed workflow automation to improve project efficiency.</li>
+                        <li>Developed workflow automations to improve project efficiency.</li>
                         <li>Managed sensitive communications and logistics for contracts.</li>
                     </ul>
                 </li>
@@ -96,7 +96,7 @@
         <div class="education">
             <ul>
                 <li>
-                    <strong>B.A. in Business Administration</strong> - <em>Virginia Tech</em> (2012 - 2016)
+                    <strong>B.A. in Business Admin</strong> - <em>Virginia Tech</em> (2012 - 2016)
                     <ul>
                         <li>Concentrated on project management and operations logistics.</li>
                         <li>Graduated with honors.</li>
