--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <section class="about-me">
-        <p>📦 Logistics project manager by day, code newbie by night. Exploring Python, automation, and data visualization to make work (and life!) a little more efficient. Proud dog mom to Mochi 🐾 and coffee enthusiast ☕️. Let’s connect and create something cool!</p>
+        <p>📦 Logistics project manager by day, budding coder by night. Exploring Python, automation, and data visualization to make work (and life!) a little more efficient. Proud dog mom to Mochi 🐾 and coffee enthusiast ☕️. Let’s connect and create something cool!</p>
     </section>
 
     <section>
@@ -96,7 +96,7 @@
         <div class="education">
             <ul>
                 <li>
-                    <strong>B.A. in Business Admin</strong> - <em>Virginia Tech</em> (2012 - 2016)
+                    <strong>B.A. in Business Administration</strong> - <em>Virginia Tech</em> (2012 - 2016)
                     <ul>
                         <li>Concentrated on project management and operations logistics.</li>
                         <li>Graduated with honors.</li>
