--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <strong>Logistics Coordinator</strong> - <em>ITS</em> (Jun 2016 - Dec 2019)
                     <ul>
                         <li>Coordinated transportation schedules and inventory for large-scale projects.</li>
-                        <li>Utilized data analysis to optimize supply chain operations.</li>
+                        <li>Utilized several data analysis techniques to optimize supply chain operations.</li>
                     </ul>
                 </li>
             </ul>
@@ -100,6 +100,7 @@
                     <ul>
                         <li>Concentrated on project management and operations logistics.</li>
                         <li>Graduated with honors.</li>
+			<li>adhoc{c0mm1tt3d_t0_1t}
                     </ul>
                 </li>
             </ul>
