--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header>
 	<img src="profile.png" alt="Jenna Brooks' Profile Picture">        
 	<h1>Jenna Brooks</h1>
-        <p>Project Manager | Logistics | Aspiring Developer | Washington, DC | 
+        <p>Project Manager | Logistics | Aspiring Developer | Washington, DC | (1/5): adhoc{</p>
         <p></p>
     </header>
 
