--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         header img {
             border-radius: 50%;
-            width: 150px;  /* Square profile picture, adjust as necessary */
+            width: 150px;
             height: 150px;
             margin-top: 10px;
         }
