--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <ul>
                         <li>Led cross-functional teams on logistics projects.</li>
                         <li>Developed workflow automations to improve project efficiency.</li>
-                        <li>Managed sensitive communications and logistics for contracts.</li>
+                        <li>Managed communications and logistics for government contracts.</li>
                     </ul>
                 </li>
                 <li>
