--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <a href="https://www.pinterest.com/brookstravels/" target="_blank">Pinterest</a> | 
             <a href="https://www.reddit.com/user/brookstravels90/" target="_blank">Reddit</a>
         </p>
-	<p> I proudly host this website on<a href="https://github.com/brookstravels90" target="_blank">GitHub</a>pages. Last updated in 2025.</p>
+	<p> I proudly host this website with <3 on<a href="https://github.com/brookstravels90" target="_blank">GitHub</a>pages. Last updated in 2025.</p>
     </footer>
 </body>
 </html>
